--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,3 @@
-.tf
 .env
 .swc
 .idea
@@ -9,4 +8,37 @@ coverage
 unit-testing
 documentation
 
+node_modules
+node_modules/*
+node_modules/**
+
+distribution
+distribution/*
+distribution/**
+
+declarations
+declarations/*
+declarations/**
+
+.terraform/*
+
+*.tfstate
+*.tfstate.*
+
+cdktf.out
+cdktf.out/*
+cdktf.out/**
+
+*.js
+**/*.js
+**/*.map
+**/*.d.ts
+
+.DS_Store
+
+*.tgz
+*.zip
+
+*.tsbuildinfo
 tsconfig.tsbuildinfo
+**/tsconfig.tsbuildinfo
