--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "dotenv-expand": "^8.0.3",
         "eslint": "^8.16.0",
         "husky": "^8.0.1",
-        "lerna": "^5.1.1",
+        "lerna": "^5.1.6",
         "ts-node": "^10.7.0",
         "typescript": "^4.7.4"
     },
@@ -22,7 +22,7 @@
         "organization": true
     },
     "scripts": {
-        "setup": "lerna init && lerna link && lerna bootstrap --npm-client npm",
+        "setup": "npx lerna init && npx lerna link && npx lerna bootstrap --npm-client npm",
         "release": "lerna version patch --no-private",
         "postversion": "lerna publish from-git --canary --no-private",
         "ci": "npm run release"
