--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Terraform
+
 **/.terraform/*
 
 *.tfstate
@@ -5,11 +7,6 @@
 
 crash.log
 crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version
-# control as they are data points which are potentially sensitive and subject
-# to change depending on the environment.
 
 *.tfvars
 *.tfvars.json
@@ -22,3 +19,13 @@ override.tf.json
 .terraformrc
 
 terraform.rc
+
+# IDE
+
+.eclipse
+.vscode
+.idea
+
+# Apple
+
+.DS_Store
