--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,5 @@ repos:
         hooks:
             -   id: terraform-docs-go
                 name: terraform-docs
+                entry: "terraform-docs"
                 args: ["--config", "./documentation", ".terraform-docs.yml"]
