--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,5 +4,8 @@ repos:
         hooks:
             -   id: terraform-docs-go
                 name: terraform-docs
+                types:
+                    - executable
+                always_run: true
                 entry: "terraform-docs"
-                args: ["--config", "./documentation", ".terraform-docs.yml"]
+                args: ["--config", "./documentation/.terraform-docs.yml"]
